--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MyWallet" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.MyWallet" parent="android:Theme.Material.Light.NoActionBar">
+        <!-- Ensure no splash screen is set -->
+        <item name="android:windowBackground">@android:color/white
+        </item> <!-- Pure white or any solid color -->
+    </style>
 </resources>
